[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-budget-chat"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD 3-Clause License"}
dependencies = [
  "attrs",
  "click"
]
dynamic=["version"]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
proto-budget-chat = "proto_budget_chat.cli:cli"
